# qa-chatgpt-hf-pgvector

./: .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile.pgvector  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
jpnotes/: chatbot.ipynb  create-embeddings.ipynb  doc-search.ipynb  guardrail_openai-0-28-1.ipynb  hf-captions.ipynb  ltree.ipynb  test-openai.ipynb
resources/: erd.md
src/docker/postgres/: init.sql
src/qa_package/: main.py  utils.py
src/qa_package/dataclasses/: orm.py
src/qa_package/services/guardrails/: __init__.py
src/qa_package/services/huggingface/: __init__.py
src/qa_package/services/openai/: __init__.py
src/qa_package/services/postgres/: __init__.py
