[metadata]
name = qa_package
description = Test Python Package
author = Yui Chun Leung
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.10
setup_requires = setuptools_scm
package_dir =
    = src

[options.packages.find]
where = src
exclude =
    test architecture

# Additional install requirements for running tests
[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-mock
    pytest-asyncio
linting =
    black==23.9.1
    isort==5.12.0
    flake8==6.1.0
alembic =
    alembic==1.4.1
    %(linting)s
dev =
    pre-commit


[tool.setuptools_scm]
version_scheme = guess-next-dev

[bdist_wheel]
universal = 1

[flake8]
ignore = E203 W503 W291 W293
max-line-length = 79
exclude =
    .tox
    dist
    .eggs
    alembic/
